// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResourceTable Name Search 1`] = `
<div>
  <div
    class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
  >
    <table
      class="MuiTable-root makeStyles-table makeStyles-table"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
          >
            Name
            <button
              aria-label="sort swap"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
          >
            Namespace
            <button
              aria-label="sort swap"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
            style="text-align: right;"
          >
            Age
            <button
              aria-label="sort up"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <span
              class=""
              title="mypod3"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/"
              >
                mypod3
              </a>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              MyNamespace3
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
            style="text-align: right;"
          >
            <p
              class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
              title="2021-12-15T14:57:13.000Z"
            >
              3mo
              <span />
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots ResourceTable No Filter 1`] = `
<div>
  <div
    class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
  >
    <table
      class="MuiTable-root makeStyles-table makeStyles-table"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
          >
            Name
            <button
              aria-label="sort swap"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
          >
            Namespace
            <button
              aria-label="sort swap"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
            scope="col"
            style="text-align: right;"
          >
            Age
            <button
              aria-label="sort up"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <span
              class=""
              title="mypod0"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/"
              >
                mypod0
              </a>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              MyNamespace0
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
            style="text-align: right;"
          >
            <p
              class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
              title="2021-12-15T14:57:13.000Z"
            >
              3mo
              <span />
            </p>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <span
              class=""
              title="mypod1"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/"
              >
                mypod1
              </a>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              MyNamespace1
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
            style="text-align: right;"
          >
            <p
              class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
              title="2021-12-15T14:57:13.000Z"
            >
              3mo
              <span />
            </p>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <span
              class=""
              title="mypod2"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/"
              >
                mypod2
              </a>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              MyNamespace2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
            style="text-align: right;"
          >
            <p
              class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
              title="2021-12-15T14:57:13.000Z"
            >
              3mo
              <span />
            </p>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <span
              class=""
              title="mypod3"
            >
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/"
              >
                mypod3
              </a>
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/"
            >
              MyNamespace3
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
            style="text-align: right;"
          >
            <p
              class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
              title="2021-12-15T14:57:13.000Z"
            >
              3mo
              <span />
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
